# sol-chirp

./: .gitignore  Anchor.toml  package-lock.json  package.json  readme.md
app/: package-lock.json  package.json  tailwind.config.ts
app/.next/: trace
app/.next/cache/webpack/client-development/: index.pack.gz.old
app/.next/cache/webpack/client-development-fallback/: index.pack.gz.old
app/.next/server/: _error.js
app/.next/server/pages/: _app.js  _document.js  _error.js  index.js
app/.next/server/vendor-chunks/: @swc.js  next.js
app/.next/static/chunks/: _error.js  webpack.js
app/.next/static/webpack/: webpack.52a52f2e708508a4.hot-update.js  webpack.698f6879cf1efeda.hot-update.js  webpack.eef2fba1a29e1a6e.hot-update.js
app/assets/: like.json  retweet.json
app/init/: init.ts
app/src/components/: AppBar.tsx  ContentContainer.tsx  Notification.tsx  SolanaTwitter.tsx  Tweet.tsx  WriteTweet.tsx
app/src/contexts/: ContextProvider.tsx
app/src/pages/: _app.tsx  index.tsx
app/src/stores/: useNotificationStore.tsx  useProfileStore.tsx
app/src/types/: sol_chirp.ts
app/src/utils/: const.ts  seed-utils.ts  util.ts
app/src/utils/idl/: sol_chirp.json
app/src/views/home/: index.tsx
programs/sol-chirp/: Cargo.toml
programs/sol-chirp/src/: lib.rs
programs/sol-chirp/src/instructions/: create_like.rs  create_mint.rs  create_profile.rs  create_profile_atas.rs  create_retweet.rs  create_tweet.rs  mod.rs
programs/sol-chirp/src/state/: like.rs  mint.rs  mod.rs  profile.rs  retweet.rs  tweet.rs
tests/: sol-chirp.ts
(+4 files in other folders)
